	  wait() and enumerate() methods from struct usbhost_driver_s and move
	  to new interface, struct usbhost_connection_s.  This is part of the
	  necessary restructuring of the USB host interface to support multiple
	  root hub ports (2013-8-13).
	* arch/arm/src/sama5/sam_ohci.c:  Major restructuring of the driver due
	  in order to handle multiple root hub ports.  Basically instead of one
	  driver structure with an arrayof root hub port structures, there is no
	  one container structure with an array of driver structures, one for
	  each root hub port.  The advantage is that each class->driver call not
	  passes information associated with the RHport implicitly.  The klugey,
	  procedural alternative was to add the function address to every
	  interface method (which I started to do but backed above) (2013-8-13).
	* arch/arm/src/sama5/sam_memories.c and .h:  Extended logic so do
	  conversions from physical to virtual addresses (2013-8-14).
	* arch/arm/src/sama5/sam_ohci.c:  Add D cache contols and conversion
	  between physical and virtual address (2013-8-14).
	* arch/arm/src/stm32/stm32_spi.c:  nbits() interface extended to
	  control bit order as well as bit width (from Teemu Pirinen)
	  (2013-8-16)
	* arch/arm/src/sama5/sam_ohci.c:  More to be tested, but the SAMA5
	  OHCI driver is now basically funtional (2013-8-16).
	* include/nuttx/usb/ehci.h:  EHCI header file (2013-8-17).
	* arch/arm/src/stm32/stm32_i2c.c:  Correct an error that crept into
	  the STM32 F1 I2C driver with some recent changes.  From Yiran Liao
	  (2013-8-18).
	* drivers/usbhost/usbhost_devaddr.c and include/nuttx/usb/usbhost_devaddr.h:
	  Add logic for management of device addresses.  This logic does not
	  currently hook into into anything.  It will someday be a part of the
	  NuttX USB hub implementation (2013-8-18).
	* nuttx/arch/arm/src/sama5/sam_ehci.c and other files:  Create a skeleton
	  environment for development of an EHCI driver.  Not much in place yet
	  (2013-8-20).
